# nixos-config

./: .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  .yamllint.yaml  AGENTS.md  CLAUDE.md  HOTKEYS.md  README.md  city.toml  flake.nix  manifest  pack.toml  patch-litellm.sh  patch_fork.py  todo.md  treefmt.toml
.agent/: AGENTS.md  install.json
.agent/protocols/: delegation.md  hook_patterns.json  nixos-config.md  permissions.md
.agent/skills/: _index.md  _manifest.jsonl
.beads/: config.yaml  metadata.json
.claude/: settings.local.json
.opencode/skills/: code-review  core.gc-agents  core.gc-city  core.gc-dashboard  core.gc-dispatch  core.gc-mail  core.gc-rigs  core.gc-work  final-audit  issue-to-tasks  prd-to-issues  snowfall-lib  write-a-prd
.sisyphus/drafts/: zellij-ssh-fix.md
agents/cc-dreamer/: agent.toml  prompt.template.md
agents/cc-implementer/: agent.toml
agents/cc-planner/: agent.toml  prompt.template.md
agents/cc-reviewer/: agent.toml
agents/oc-dreamer/: agent.toml
agents/oc-implementer/: agent.toml  prompt.template.md
agents/oc-planner/: agent.toml  prompt.template.md
agents/oc-reviewer/: agent.toml  prompt.template.md
apps/x86_64-linux/: install
docs/: swarm-litellm-gfr-federation.md
docs/design/: gfr-exo-auth-proxy.md
docs/development/: autopkg.md
fragments/: schrodan-context.md
lib/: default.nix
nix/: pre-commit.nix
profiles/: macfuse-kext-allowlist.mobileconfig
projects/: README.md
projects/ingest/: README.md  langgraph.json  pyproject.toml
projects/ingest/ingest/: __init__.py  cli.py  config.py  state.py  telemetry.py
projects/ingest/ingest/adapters/: __init__.py  atlassian.py  github.py  obsidian.py
projects/ingest/ingest/graphs/: __init__.py  atlassian.py  github.py  obsidian.py
projects/ingest/ingest/sinks/: __init__.py  openwebui.py
projects/ingest/scripts/: atlassian-sync.sh  github-sync.sh  obsidian-sync.sh
projects/swarm/: README.md  langgraph.json  litellm_config.yaml  pyproject.toml
projects/swarm/scripts/: start-litellm.sh  start-phoenix.sh  start-swarm.sh
projects/swarm/swarm/: __init__.py  cli.py  config.py  demo.py  graph.py  graph_entrypoint.py  research.py  telemetry.py
projects/swarm/swarm/agents/: browser.py  vault.py
scripts/: deploy-cluster.sh
secrets/: README.md  atlassian-api-token.yaml  atlassian-email.yaml  atlassian-site.yaml  azure-api-key-opencode-darwin.yaml  fleet.env  gemini-enterprise-api-key.yaml  gfr-exo-auth-token.yaml  github-api-token.yaml  grafana-admin-password.yaml  ingest.env.example  langgraph-pg-password.yaml  litellm-key-claude-code-darwin.yaml  litellm-key-claude-code-nixos.yaml  litellm-key-hermes.yaml  litellm-key-hybrid-olive.yaml  litellm-key-local-svc-hermes.yaml  litellm-key-opencode-darwin.yaml  litellm-key-opencode.yaml  litellm-master-key.yaml  litellm-pg-password.yaml  litellm-salt-key.yaml  opencode.env  openwebui-admin-password.yaml  openwebui-api-token.yaml  openwebui-secret-key.yaml  redis-seaweedfs-password.yaml  seaweedfs-admin-secret.yaml
(+179 files in other folders)
